# Mood-Detector

./: README.md  pyproject.toml  setup.py
docs/: INTEGRATION.md  QUICKSTART.md
