[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mood-detector"
version = "0.1.0"
description = "Open-source music mood analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "usr-wwelsh"}
]
keywords = ["music", "audio", "mood", "analysis", "librosa", "dj", "tempo", "bpm", "key-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "librosa>=0.11.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6"
]

[project.urls]
Homepage = "https://github.com/usr-wwelsh/mood-detector"
Repository = "https://github.com/usr-wwelsh/mood-detector"
Issues = "https://github.com/usr-wwelsh/mood-detector/issues"

[project.scripts]
mood = "cli.mood:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mood_detector*", "cli*", "api*"]
exclude = ["tests*", "docs*"]
